--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_pin_code_fields: ^1.1.0
   dropdown_formfield: ^0.1.4
   google_fonts: ^4.0.3
+  flutter_rating_bar: ^4.0.1
+  percent_indicator:
 
 dev_dependencies:
   flutter_test:
