--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   dropdown_formfield: ^0.1.4
   google_fonts: ^4.0.3
   flutter_rating_bar: ^4.0.1
+  date_time_picker: ^2.1.0
+  intl_phone_field: ^3.1.0
+  intl: ^0.17.0
   percent_indicator:
 
 dev_dependencies:
