--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   percent_indicator:
   flutter_svg: ^1.1.6
   pin_code_fields: ^7.4.0
+  card_swiper: ^2.0.4
 
 dev_dependencies:
   flutter_test:
