--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_svg: ^1.1.6
   pin_code_fields: ^7.4.0
   card_swiper: ^2.0.4
+  image_picker: ^0.8.4+4
+  multi_image_picker: ^4.6.7
 
 dev_dependencies:
   flutter_test:
